--- a/src/css/common.css
+++ b/src/css/common.css
@@ -7,7 +7,7 @@ body {
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  background-color: #a9a8a8;
   color: #212121;
   line-height: 1.5;
 }
@@ -23,13 +23,16 @@ ul {
   flex-direction: column;
   gap: 20px;
   padding: 0;
+  display: flex;
+  gap: 20px;
+  align-items: center;
 }
 
 .list-item {
   max-width: 220px;
   width: 250px;
   background-color: #4d5ae5;
-  border: 1px solid black;
+  border: 2px solid #fafafad2;
   border-radius: 5px;
   color: #fafafad2;
   text-align: center;
@@ -39,7 +42,10 @@ ul {
   text-decoration: none;
   color: #fafafad2;
 }
+
 .list-item:hover,
 .list-item:focus {
   background-color: #404bbf;
+  border-color: #404bbf;
+  color: #ffffff;
 }
