--- a/src/css/common.css
+++ b/src/css/common.css
@@ -8,7 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #a9a8a8;
-  color: #212121;
+  color: #08aa31c2;
   line-height: 1.5;
 }
 
