--- a/src/css/common.css
+++ b/src/css/common.css
@@ -61,7 +61,7 @@ span.flatpickr-day.selected {
   -webkit-box-shadow: none;
   box-shadow: none;
   color: #f6c218;
-  background-color: #08aa31c2;
+  background-color: #08aa31;
   border-color: #f6c218;
 }
 .flatpickr-time input.flatpickr-hour.selected,
@@ -70,11 +70,15 @@ span.flatpickr-day.selected {
 .flatpickr-time input.flatpickr-hour,
 .flatpickr-time input.flatpickr-minute,
 .flatpickr-time input.flatpickr-second {
-  color: #f6c218;
+  color: #08aa31;
   font-weight: 400;
-  background: #08aa31c2;
+  /* background: #08aa31; */
 }
 
 span.flatpickr-weekday {
-  color: #08aa31c2;
+  color: #08aa31;
+}
+
+input {
+  outline: none;
 }
