--- a/src/css/common.css
+++ b/src/css/common.css
@@ -163,74 +163,10 @@ span.flatpickr-day.today:focus {
   background: #0b7325;
   border-color: #f6c218;
 }
-/* .flatpickr-day.selected,
-.flatpickr-day.startRange,
-.flatpickr-day.endRange,
-.flatpickr-day.selected.inRange,
-.flatpickr-day.startRange.inRange,
-.flatpickr-day.endRange.inRange,
-.flatpickr-day.selected:focus,
-.flatpickr-day.startRange:focus,
-.flatpickr-day.endRange:focus,
-.flatpickr-day.selected:hover,
-.flatpickr-day.startRange:hover,
-.flatpickr-day.endRange:hover,
-.flatpickr-day.selected.prevMonthDay,
-.flatpickr-day.startRange.prevMonthDay,
-.flatpickr-day.endRange.prevMonthDay,
-.flatpickr-day.selected.nextMonthDay,
-.flatpickr-day.startRange.nextMonthDay,
-.flatpickr-day.endRange.nextMonthDay {
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  color: #fff;
+
+div.flatpickr-time input:hover,
+div.flatpickr-time .flatpickr-am-pm:hover,
+div.flatpickr-time input:focus,
+div.flatpickr-time .flatpickr-am-pm:focus {
   background: #0b7325;
-  border-color: #569ff7;
-} */
-/* .flatpickr-day.flatpickr-disabled,
-.flatpickr-day.flatpickr-disabled:hover,
-.flatpickr-day.prevMonthDay,
-.flatpickr-day.nextMonthDay,
-.flatpickr-day.notAllowed,
-.flatpickr-day.notAllowed.prevMonthDay,
-.flatpickr-day.notAllowed.nextMonthDay {
-  color: #08aa31;
-  cursor: default;
-  background: none;
-  border-color: #0000;
-} */
-/* .flatpickr-weekwrapper span.flatpickr-day,
-.flatpickr-weekwrapper span.flatpickr-day:hover {
-  width: 100%;
-  max-width: none;
-  color: #3939394d;
-  cursor: default;
-  background: #08aa31;
-  border: none;
-  display: block;
-} */
-
-/* .flatpickr-time input {
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  text-align: center;
-  height: inherit;
-  line-height: inherit;
-  color: #393939;
-  box-sizing: border-box;
-  appearance: textfield;
-  background: #08aa31;
-  border: 0;
-  border-radius: 0;
-  margin: 0;
-  padding: 0;
-  font-size: 14px;
-  position: relative;
-} */
-
-/* .flatpickr-time input:hover,
-.flatpickr-time .flatpickr-am-pm:hover,
-.flatpickr-time input:focus,
-.flatpickr-time .flatpickr-am-pm:focus {
-  background: #08aa31;
-} */
+}
