--- a/src/css/common.css
+++ b/src/css/common.css
@@ -139,16 +139,161 @@ div.flatpickr-time .flatpickr-am-pm:focus {
   background: #0b7325;
 }
 
-.flatpickr-months .flatpickr-prev-month:hover,
-.flatpickr-months .flatpickr-next-month:hover {
-  color: #959ea9;
+span.flatpickr-day.selected,
+span.flatpickr-day.startRange,
+span.flatpickr-day.endRange,
+span.flatpickr-day.selected.inRange,
+span.flatpickr-day.startRange.inRange,
+span.flatpickr-day.endRange.inRange,
+span.flatpickr-day.selected:focus,
+span.flatpickr-day.startRange:focus,
+span.flatpickr-day.endRange:focus,
+span.flatpickr-day.selected:hover,
+span.flatpickr-day.startRange:hover,
+span.flatpickr-day.endRange:hover,
+span.flatpickr-day.selected.prevMonthDay,
+span.flatpickr-day.startRange.prevMonthDay,
+span.flatpickr-day.endRange.prevMonthDay,
+span.flatpickr-day.selected.nextMonthDay,
+span.flatpickr-day.startRange.nextMonthDay,
+span.flatpickr-day.endRange.nextMonthDay {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  color: #f6c218;
+  background: #08aa31;
+  border-color: #f6c218;
 }
-.flatpickr-months .flatpickr-prev-month:hover,
-.flatpickr-months .flatpickr-next-month:hover {
+
+/* llllllllllllllllll */
+.flatpickr-months select.flatpickr-month {
+  color: #f6c218;
+  fill: #f6c218;
+  height: 34px;
+  text-align: center;
+  user-select: none;
+  background: none;
+  flex: 1;
+  line-height: 1;
+  position: relative;
+  overflow: hidden;
+}
+.flatpickr-months span.flatpickr-prev-month:hover,
+.flatpickr-months span.flatpickr-next-month:hover {
+  color: #f6c218;
+}
+.flatpickr-months span.flatpickr-prev-month:hover,
+.flatpickr-months span.flatpickr-next-month:hover {
   color: #959ea9;
 }
 
 .flatpickr-months .flatpickr-prev-month:hover svg,
 .flatpickr-months .flatpickr-next-month:hover svg {
-  fill: #f64747;
+  fill: #f6c218;
+}
+.numInputWrapper span:hover {
+  background: #0000001a;
+}
+
+.numInputWrapper span:active {
+  background: #0003;
+}
+.numInputWrapper:hover {
+  background: #0000000d;
+}
+.flatpickr-current-month span.cur-month:hover {
+  background: #0000000d;
+}
+.flatpickr-current-month .flatpickr-monthDropdown-months:hover {
+  background: #0000000d;
+}
+.flatpickr-day.inRange,
+.flatpickr-day.prevMonthDay.inRange,
+.flatpickr-day.nextMonthDay.inRange,
+.flatpickr-day.today.inRange,
+.flatpickr-day.prevMonthDay.today.inRange,
+.flatpickr-day.nextMonthDay.today.inRange,
+.flatpickr-day:hover,
+.flatpickr-day.prevMonthDay:hover,
+.flatpickr-day.nextMonthDay:hover,
+.flatpickr-day:focus,
+.flatpickr-day.prevMonthDay:focus,
+.flatpickr-day.nextMonthDay:focus {
+  cursor: pointer;
+  background: #e6e6e6;
+  border-color: #e6e6e6;
+  outline: 0;
+}
+
+.flatpickr-day.today {
+  border-color: #959ea9;
+}
+
+.flatpickr-day.today:hover,
+.flatpickr-day.today:focus {
+  color: #fff;
+  background: #959ea9;
+  border-color: #959ea9;
+}
+.flatpickr-day.today:hover,
+.flatpickr-day.today:focus {
+  color: #fff;
+  background: #959ea9;
+  border-color: #959ea9;
+}
+.flatpickr-day.selected,
+.flatpickr-day.startRange,
+.flatpickr-day.endRange,
+.flatpickr-day.selected.inRange,
+.flatpickr-day.startRange.inRange,
+.flatpickr-day.endRange.inRange,
+.flatpickr-day.selected:focus,
+.flatpickr-day.startRange:focus,
+.flatpickr-day.endRange:focus,
+.flatpickr-day.selected:hover,
+.flatpickr-day.startRange:hover,
+.flatpickr-day.endRange:hover,
+.flatpickr-day.selected.prevMonthDay,
+.flatpickr-day.startRange.prevMonthDay,
+.flatpickr-day.endRange.prevMonthDay,
+.flatpickr-day.selected.nextMonthDay,
+.flatpickr-day.startRange.nextMonthDay,
+.flatpickr-day.endRange.nextMonthDay {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  color: #fff;
+  background: #569ff7;
+  border-color: #569ff7;
+}
+.flatpickr-day.flatpickr-disabled,
+.flatpickr-day.flatpickr-disabled:hover,
+.flatpickr-day.prevMonthDay,
+.flatpickr-day.nextMonthDay,
+.flatpickr-day.notAllowed,
+.flatpickr-day.notAllowed.prevMonthDay,
+.flatpickr-day.notAllowed.nextMonthDay {
+  color: #3939394d;
+  cursor: default;
+  background: none;
+  border-color: #0000;
+}
+.flatpickr-day.flatpickr-disabled,
+.flatpickr-day.flatpickr-disabled:hover {
+  cursor: not-allowed;
+  color: #3939391a;
+}
+.flatpickr-weekwrapper span.flatpickr-day,
+.flatpickr-weekwrapper span.flatpickr-day:hover {
+  width: 100%;
+  max-width: none;
+  color: #3939394d;
+  cursor: default;
+  background: none;
+  border: none;
+  display: block;
+}
+.flatpickr-time input:hover,
+.flatpickr-time .flatpickr-am-pm:hover,
+.flatpickr-time input:focus,
+.flatpickr-time .flatpickr-am-pm:focus {
+  background: #eee;
 }
